ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/Lab_Sample__c.object-meta.xml
<CustomObject>
    <label>Lab Sample</label>
    <nameField>
        <displayFormat>LS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Samples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>