ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A link to the Claim this lab sample is related to. Lab Samples with no links to a Claim have been received but not properly connected to a cliam.</description>
    <inlineHelpText>The Claim this Lab Sample relates to.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Lab Samples</relationshipLabel>
    <relationshipName>Lab_Samples</relationshipName>
    <type>Lookup</type>
</CustomField>