ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed__c</fullName>
    <description>Formula field to indicate if the parent Claims case is closed; used for lightning page component visibility</description>
    <formula>TEXT(Case__r.Claim_Stage__c) == &apos;Closed&apos;</formula>
    <label>Case Closed?</label>
    <type>Checkbox</type>
</CustomField>