ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Description__c</fullName>
    <description>CLAIMS - 77. Field to hold the related case description</description>
    <inlineHelpText>Related Case&apos;s description</inlineHelpText>
    <label>Case Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>