ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Installation_Date__c</fullName>
    <description>Installation date from the case.</description>
    <formula>Case__r.Installation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case: Installation Date</label>
    <type>Date</type>
</CustomField>