ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_Leaking__c.field-meta.xml
<CustomField>
    <fullName>Case_Leaking__c</fullName>
    <formula>Case__r.Leaking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leaking?</label>
    <type>Checkbox</type>
</CustomField>