ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Date__c</fullName>
    <description>Used for list views</description>
    <formula>Case__r.CreatedDate</formula>
    <label>Case Open Date</label>
    <type>DateTime</type>
</CustomField>