ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Score__c</fullName>
    <description>Contain the Associated Case&apos;s Priority Score - https://ikoussfsc.atlassian.net/browse/CLAIMSV2-30</description>
    <formula>Case__r.Priority_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Associated Case&apos;s Priority is determined by an accumulated score based on the following: Created by Sales 2 points), Job is in Progress ( 4 points), leaking (1 points).  Maximum score is 7 minimum score is 0</inlineHelpText>
    <label>Case Priority Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>