ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Case_PrioritySort__c.field-meta.xml
<CustomField>
    <fullName>Case_PrioritySort__c</fullName>
    <description>Priority Score Sort used to filter the Case List views based on multiple fields (Priority Score and Create Date)</description>
    <formula>Case__r.CasePrioritySort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Priority Score Sort used to filter the Case List views based on multiple fields (Priority Score and Create Date)</inlineHelpText>
    <label>Case PrioritySort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>