ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/CaseInLegal__c.field-meta.xml
<CustomField>
    <fullName>CaseInLegal__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-87
Indicates whether the Case is In Litigation or not</description>
    <formula>Case__r.Legal__c &amp;&amp; (
$Profile.Name != &apos;Claims Manager&apos; &amp;&amp;
$Profile.Name != &apos;Commercial Claims Rep&apos; &amp;&amp;
$Profile.Name != &apos;Residential Claims Rep&apos; &amp;&amp;
$Profile.Name != &apos;Lab Manager&apos; &amp;&amp;
$Profile.Name != &apos;Lab Technician&apos; &amp;&amp;
$Profile.Name != &apos;System Administrator&apos; &amp;&amp;
$Profile.Name != &apos;Plant Manager&apos; &amp;&amp;
$Profile.Name != &apos;Iko Plants&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates whether the Case is In Litigation or not</inlineHelpText>
    <label>CaseInLegal</label>
    <type>Checkbox</type>
</CustomField>