ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <formula>Case__r.Claim_Number__c</formula>
    <label>Claim Number</label>
    <type>Text</type>
</CustomField>