ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Claim_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Stage__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-358
Claims Stage</description>
    <formula>TEXT(Case__r.Claim_Stage__c)</formula>
    <inlineHelpText>Claims Stage</inlineHelpText>
    <label>Claim Stage</label>
    <type>Text</type>
</CustomField>