ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Claim_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Sub_Stage__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-358
Claim Sub Stage</description>
    <formula>Text( Case__r.Claim_Sub_Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Claim Sub Stage</inlineHelpText>
    <label>Claim Sub Stage</label>
    <type>Text</type>
</CustomField>