ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Courier_to_Research_Lab__c.field-meta.xml
<CustomField>
    <fullName>Courier_to_Research_Lab__c</fullName>
    <description>Used by Kankakee users to record courier for the Lab Samples that are sent to Brampton Research lab for testing.</description>
    <label>Courier to Research Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Courier</valueSetName>
    </valueSet>
</CustomField>