ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Date_Shipped_To_Plant__c.field-meta.xml
<CustomField>
    <fullName>Date_Shipped_To_Plant__c</fullName>
    <description>The date the sample was shipped to plant.</description>
    <label>Date Shipped To Plant</label>
    <type>Date</type>
</CustomField>