ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Days_Opened__c.field-meta.xml
<CustomField>
    <fullName>Days_Opened__c</fullName>
    <description>Calculates the number of days from the &quot;received date&quot; to &quot;Today&quot; - for user story CLAIMSV2-386</description>
    <formula>Today () - Received_Date_Brampton__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>