ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Disposition_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Disposition_of_Sample__c</fullName>
    <description>This records the sample&apos;s disposition once the tests are completed by the lab tech.</description>
    <label>Disposition of Sample</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumed by Testing</fullName>
            </value>
            <value>
                <fullName>Forward to Plant</fullName>
            </value>
            <value>
                <fullName>Retained at Lab</fullName>
            </value>
            <value>
                <fullName>Returned to Cust Svc</fullName>
            </value>
            <value>
                <fullName>Samples Discarded</fullName>
            </value>
            <value>
                <fullName>Save for 1 Year</fullName>
            </value>
            <value>
                <fullName>Samples to Lab</fullName>
            </value>
            <value>
                <fullName>Samples to Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>