ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Disposition_Plant__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Plant__c</fullName>
    <description>CLAIMS - 359. This field will be used to identify which plant the sample should be sent to</description>
    <inlineHelpText>The plant the sample should be sent to</inlineHelpText>
    <label>Disposition Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Producing_Plants</valueSetName>
    </valueSet>
</CustomField>