ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Eligible_for_Approval_submission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Approval_submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CLAIMS - 574. This field is populated by the LabTestResultTrigger only when all related LabTest Results are either in Completed or Not Required Status. This field will be used in the entry criteria for the LabSample approval process</description>
    <inlineHelpText>Signifies if Lab Sample is eligible for approval submission based on whether all related Lab Test Results are either in Completed or Not Required Status</inlineHelpText>
    <label>(Deprecated) Eligible for Approval</label>
    <type>Checkbox</type>
</CustomField>