ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicated feedback on the Lab Sample - CLAIMSV2-64</description>
    <label>Feedback</label>
    <type>Checkbox</type>
</CustomField>