ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/First_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Approved_Date__c</fullName>
    <description>Contains the first approved lab sample date ClaimsV2-438 https://ikoussfsc.atlassian.net/browse/CLAIMSV2-438</description>
    <inlineHelpText>Contains the first approved lab sample date</inlineHelpText>
    <label>First Approved Date</label>
    <type>Date</type>
</CustomField>