ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Generate_Sample_Number__c.field-meta.xml
<CustomField>
    <fullName>Generate_Sample_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to indicate the Sample Number should be generated</description>
    <label>Generate Sample Number</label>
    <type>Checkbox</type>
</CustomField>