ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Generate_Tests__c.field-meta.xml
<CustomField>
    <fullName>Generate_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to fire the code to generate the default tests</description>
    <label>Generate Tests</label>
    <type>Checkbox</type>
</CustomField>