ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/In_Brampton__c.field-meta.xml
<CustomField>
    <fullName>In_Brampton__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the Sample has been received in the Brampton lab; this will drive Sample Number sequence</inlineHelpText>
    <label>In Brampton?</label>
    <type>Checkbox</type>
</CustomField>