ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Incomplete_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Lab Team to indicate incomplete documentation - CLAIMSV2-387 and CLAIMSV2-388</description>
    <label>Incomplete Documentation</label>
    <type>Checkbox</type>
</CustomField>