ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Lab_Sample_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample_Approved_Date__c</fullName>
    <description>Date when the Lab Sample Status is switched to &quot;Approved&quot; - for CLAIMSV2-387</description>
    <label>Lab Sample Approved Date</label>
    <type>Date</type>
</CustomField>