ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/LabSamplePrioritySort__c.field-meta.xml
<CustomField>
    <fullName>LabSamplePrioritySort__c</fullName>
    <formula>VALUE (
TEXT((99 -  Case_Priority_Score__c )) &amp; &quot;&quot; &amp;
TEXT(YEAR(Received_Date_Brampton__c )) &amp; &quot;&quot; &amp;
if (LEN(TEXT(MONTH(Received_Date_Brampton__c))) &lt; 2, &quot;0&quot; &amp; TEXT(MONTH(Received_Date_Brampton__c)), TEXT(MONTH(Received_Date_Brampton__c))) &amp; &quot;&quot; &amp;
if (LEN(TEXT(DAY(Received_Date_Brampton__c))) &lt; 2, &quot;0&quot; &amp; TEXT(DAY(Received_Date_Brampton__c)), TEXT(DAY(Received_Date_Brampton__c)))
)</formula>
    <label>LabSamplePrioritySort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>