ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of record from legacy (WCMS) system</inlineHelpText>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>