ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-87
Indicate whether the Claim is in Litigation</description>
    <formula>Case__r.Legal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicate whether the Claim is in Litigation</inlineHelpText>
    <label>Legal</label>
    <type>Checkbox</type>
</CustomField>