ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Number_of_Shingles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shingles__c</fullName>
    <description>records the number of shingles for disposition</description>
    <label>Number of Shingles</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>