ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>This is to record the observations by Lab Tech and Lab Manager</description>
    <label>Observation</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>