ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Pending_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval_Date__c</fullName>
    <description>Date when Case Sub Stage switched to &quot;Pending Approval&quot; - for CLAIMSV2-388</description>
    <label>Pending Approval Date</label>
    <type>Date</type>
</CustomField>