ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Photos_Received__c.field-meta.xml
<CustomField>
    <fullName>Photos_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-1041</description>
    <label>Photos Received</label>
    <type>Checkbox</type>
</CustomField>