ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Plant_Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Plant_Feedback_Type__c</fullName>
    <description>Allows a user to select multiple Feedback Topics - CLAIMSV2-64</description>
    <label>Plant Feedback Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Algae</fullName>
            </value>
            <value>
                <fullName>Asphalt bleedthrough</fullName>
            </value>
            <value>
                <fullName>Asphalt on Face</fullName>
            </value>
            <value>
                <fullName>Blend</fullName>
            </value>
            <value>
                <fullName>Blistering</fullName>
            </value>
            <value>
                <fullName>Blow-off</fullName>
            </value>
            <value>
                <fullName>Brittle</fullName>
            </value>
            <value>
                <fullName>Buckling</fullName>
            </value>
            <value>
                <fullName>Clawing</fullName>
            </value>
            <value>
                <fullName>Colour Other</fullName>
            </value>
            <value>
                <fullName>Cracking</fullName>
            </value>
            <value>
                <fullName>Cracking paper backing</fullName>
            </value>
            <value>
                <fullName>Curling</fullName>
            </value>
            <value>
                <fullName>Delamination</fullName>
            </value>
            <value>
                <fullName>Dimension</fullName>
            </value>
            <value>
                <fullName>Expired Date</fullName>
            </value>
            <value>
                <fullName>Fishmouthing</fullName>
            </value>
            <value>
                <fullName>Fissures</fullName>
            </value>
            <value>
                <fullName>Goodwill</fullName>
            </value>
            <value>
                <fullName>Granule Loss</fullName>
            </value>
            <value>
                <fullName>HitchHikers</fullName>
            </value>
            <value>
                <fullName>Hooking</fullName>
            </value>
            <value>
                <fullName>Impressions</fullName>
            </value>
            <value>
                <fullName>Loose/Missing AZ tape</fullName>
            </value>
            <value>
                <fullName>Loose/Missing release tape</fullName>
            </value>
            <value>
                <fullName>Low weight</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Nail Line</fullName>
            </value>
            <value>
                <fullName>Non Seal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>