ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/PRM__c.field-meta.xml
<CustomField>
    <fullName>PRM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-294
Indicates whether the Lab Sample should be reviewed by the Plant.</description>
    <inlineHelpText>Indicates whether the Lab Sample should be reviewed by the Plant.</inlineHelpText>
    <label>PRM</label>
    <type>Checkbox</type>
</CustomField>