ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Product_Details__c</fullName>
    <defaultValue>&quot;Width:&quot; &amp; BR() &amp;
&quot;Length:&quot; &amp; BR() &amp;
&quot;Cutout Length:&quot; &amp; BR() &amp;
&quot;Tape Width:&quot; &amp; BR() &amp;
&quot;Transfer Percent:&quot;</defaultValue>
    <description>This is to allow Lab users to enter the details such as width, length, cutout length, tape width, transfer percent and other details.</description>
    <label>Product Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>