ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Received_Date_Kankakee__c.field-meta.xml
<CustomField>
    <fullName>Received_Date_Kankakee__c</fullName>
    <label>Received Date (Kankakee)</label>
    <type>Date</type>
</CustomField>