ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Recent_Manufacture_Date__c.field-meta.xml
<CustomField>
    <fullName>Recent_Manufacture_Date__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-294
Capture the most recent manufacture date of the Lab Sample Tape Code</description>
    <inlineHelpText>Capture the most recent manufacture date of the Lab Sample Tape Code.</inlineHelpText>
    <label>Recent Manufacture Date</label>
    <type>Date</type>
</CustomField>