ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Sequence_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Prefix__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Prefix for the Sector/Country of the sample, e.g. CC for Canadian Commercial</inlineHelpText>
    <label>Sequence Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>