ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Shipping_Date_to_Research_Lab__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date_to_Research_Lab__c</fullName>
    <description>Record the date the Kankakee facility ships the sample.</description>
    <label>Shipping Date to Research Lab</label>
    <type>Date</type>
</CustomField>