ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Do not display on Lab Sample Layouts. This field should be visible to System Administrators only. This is updated by a process builder that runs on the related case.</description>
    <inlineHelpText>This is updated using a process builder and should be edited by any users other than a system administrator.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Received</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>In Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>In Analysis</fullName>
                <isActive>false</isActive>
                <label>In Analysis</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Tests Complete</fullName>
                <isActive>false</isActive>
                <label>Tests Complete</label>
            </value>
            <value>
                <fullName>Tests Scheduled</fullName>
                <isActive>false</isActive>
                <label>Tests Scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>