ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Technician_Time__c.field-meta.xml
<CustomField>
    <fullName>Technician_Time__c</fullName>
    <formula>IF(OR(ISNULL(Pending_Approval_Date__c),ISNULL(Received_Date_Brampton__c)),0,
If( Pending_Approval_Date__c  - Received_Date_Brampton__c &gt; 0, Pending_Approval_Date__c  - Received_Date_Brampton__c, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technician Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>