ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Test_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Generation_Date__c</fullName>
    <description>Date stamp of when default tests were generated</description>
    <label>Test Generation Date</label>
    <type>DateTime</type>
</CustomField>