ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Time_in_Research__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Research__c</fullName>
    <formula>IF(OR(ISNULL(First_Approved_Date__c),ISNULL(Received_Date_Brampton__c)),0,If(First_Approved_Date__c - Received_Date_Brampton__c &gt; 0,First_Approved_Date__c - Received_Date_Brampton__c, 1))</formula>
    <label>Time in Research</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>