ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Total_Lab_Test_Result_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Lab_Test_Result_Completed__c</fullName>
    <description>Total number of lab test result completed or not required</description>
    <label>Total Lab Test Result Completed</label>
    <summaryFilterItems>
        <field>Lab_Test_Result__c.Test_Status__c</field>
        <operation>equals</operation>
        <value>Completed, Not Required</value>
    </summaryFilterItems>
    <summaryForeignKey>Lab_Test_Result__c.Lab_Sample__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>