ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Total_Number_of_Lab_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Lab_Test_Result__c</fullName>
    <description>Total number of lab test result</description>
    <label>Total Number of Lab Test Result</label>
    <summaryForeignKey>Lab_Test_Result__c.Lab_Sample__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>