ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Tracking_No_to_Research_Lab__c.field-meta.xml
<CustomField>
    <fullName>Tracking_No_to_Research_Lab__c</fullName>
    <description>This tracks the tracking number for samples shipped from kankakee to the research lab</description>
    <label>Tracking No. to Research Lab</label>
    <length>100</length>
    <type>Text</type>
</CustomField>