ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking details for the shipping of the sample.</description>
    <label>Tracking Number for Disposition</label>
    <length>200</length>
    <type>Text</type>
</CustomField>