ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>VALUE(RIGHT(TEXT(YEAR(TODAY())), 2) )</defaultValue>
    <description>2 digit year for the Sample; used as part of the Sample Number</description>
    <label>Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>