ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Sample__c/validationRules/Brampton_Received_Date_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Brampton_Received_Date_in_Future</fullName>
    <active>true</active>
    <description>Received date cannot be a date in the future, because you haven&apos;t actually received it yet.</description>
    <errorConditionFormula>Received_Date_Brampton__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Received_Date_Brampton__c</errorDisplayField>
    <errorMessage>You can&apos;t enter a Received Date that&apos;s in the future.</errorMessage>
</ValidationRule>